--- a/index.html
+++ b/index.html
@@ -6,8 +6,12 @@
   </head>
   <body>
     <h1>Hello World</h1>
+
+    <!--app scripts-->
+    <script src"bower_components/requirejs/require.js" date-main = #.l/modiule> </script>
+
     <script src ="app.js"> </script>
 
-    </script>
+
   </body>
 </html>
